[FIX] mail: add padding around search bar
Before this commit, the search bar was too close to the header bar, now
padding has been added.

task-5092001

closes odoo/odoo#227647

Related: odoo/enterprise#95004

--- a/addons/mail/static/src/core/public_web/discuss_search.scss
+++ b/addons/mail/static/src/core/public_web/discuss_search.scss
@@ -14,3 +14,7 @@
         }
     }
 }
+
+.o-mail-DiscussSearch {
+    padding-top: var(--DiscussSearch-padding-top, #{map-get($spacers, 1)});
+}
